--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
   "homepage": "https://github.com/jonnymortemore/odin-project-webpack-template#readme",
   "description": "",
   "devDependencies": {
+    "@eslint/js": "^9.39.0",
     "css-loader": "^7.1.2",
+    "eslint": "^9.39.0",
+    "globals": "^16.5.0",
     "html-loader": "^5.1.0",
     "html-webpack-plugin": "^5.6.4",
     "style-loader": "^4.0.0",
